grammaire/output/WhileParser.java
// $ANTLR 3.5.1 /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g 2023-11-14 16:52:05

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class WhileParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "SYMBOL", "VARIABLE", "'%'", "'('", 
		"')'", "','", "':'", "':='", "';'", "'=?'", "'cons'", "'do'", "'else'", 
		"'fi'", "'for'", "'foreach'", "'function'", "'hd'", "'if'", "'in'", "'list'", 
		"'nil'", "'nop'", "'od'", "'read'", "'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__6=6;
	public static final int T__7=7;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int SYMBOL=4;
	public static final int VARIABLE=5;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "exprBase", "exprs", "program", "input", "vars", "definition", 
		"function", "command", "lExpr", "output", "commands", "inputSub", "expression"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public WhileParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public WhileParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public WhileParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return WhileParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g"; }



	// $ANTLR start "exprBase"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:7:1: exprBase : ( ( 'nil' | VARIABLE | SYMBOL ) | ( ( '(' 'cons' lExpr ')' ) | ( '(' 'list' lExpr ')' ) ) | ( ( '(' 'hd' exprBase ')' ) | ( '(' 'tl' exprBase ')' ) ) | ( '(' SYMBOL lExpr ')' ) );
	public final void exprBase() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "exprBase");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(7, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:7:10: ( ( 'nil' | VARIABLE | SYMBOL ) | ( ( '(' 'cons' lExpr ')' ) | ( '(' 'list' lExpr ')' ) ) | ( ( '(' 'hd' exprBase ')' ) | ( '(' 'tl' exprBase ')' ) ) | ( '(' SYMBOL lExpr ')' ) )
			int alt3=4;
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= SYMBOL && LA3_0 <= VARIABLE)||LA3_0==25) ) {
				alt3=1;
			}
			else if ( (LA3_0==7) ) {
				switch ( input.LA(2) ) {
				case 14:
				case 24:
					{
					alt3=2;
					}
					break;
				case 21:
				case 30:
					{
					alt3=3;
					}
					break;
				case SYMBOL:
					{
					alt3=4;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 2, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:8:2: ( 'nil' | VARIABLE | SYMBOL )
					{
					dbg.location(8,2);
					if ( (input.LA(1) >= SYMBOL && input.LA(1) <= VARIABLE)||input.LA(1)==25 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						dbg.recognitionException(mse);
						throw mse;
					}
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:4: ( ( '(' 'cons' lExpr ')' ) | ( '(' 'list' lExpr ')' ) )
					{
					dbg.location(9,4);
					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:4: ( ( '(' 'cons' lExpr ')' ) | ( '(' 'list' lExpr ')' ) )
					int alt1=2;
					try { dbg.enterSubRule(1);
					try { dbg.enterDecision(1, decisionCanBacktrack[1]);

					int LA1_0 = input.LA(1);
					if ( (LA1_0==7) ) {
						int LA1_1 = input.LA(2);
						if ( (LA1_1==14) ) {
							alt1=1;
						}
						else if ( (LA1_1==24) ) {
							alt1=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 1, 1, input);
								dbg.recognitionException(nvae);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						dbg.recognitionException(nvae);
						throw nvae;
					}

					} finally {dbg.exitDecision(1);}

					switch (alt1) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:6: ( '(' 'cons' lExpr ')' )
							{
							dbg.location(9,6);
							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:6: ( '(' 'cons' lExpr ')' )
							dbg.enterAlt(1);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:7: '(' 'cons' lExpr ')'
							{
							dbg.location(9,7);
							match(input,7,FOLLOW_7_in_exprBase96); dbg.location(9,11);
							match(input,14,FOLLOW_14_in_exprBase98); dbg.location(9,18);
							pushFollow(FOLLOW_lExpr_in_exprBase100);
							lExpr();
							state._fsp--;
							dbg.location(9,24);
							match(input,8,FOLLOW_8_in_exprBase102); 
							}

							}
							break;
						case 2 :
							dbg.enterAlt(2);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:31: ( '(' 'list' lExpr ')' )
							{
							dbg.location(9,31);
							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:31: ( '(' 'list' lExpr ')' )
							dbg.enterAlt(1);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:9:32: '(' 'list' lExpr ')'
							{
							dbg.location(9,32);
							match(input,7,FOLLOW_7_in_exprBase108); dbg.location(9,36);
							match(input,24,FOLLOW_24_in_exprBase110); dbg.location(9,43);
							pushFollow(FOLLOW_lExpr_in_exprBase112);
							lExpr();
							state._fsp--;
							dbg.location(9,49);
							match(input,8,FOLLOW_8_in_exprBase114); 
							}

							}
							break;

					}
					} finally {dbg.exitSubRule(1);}

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:4: ( ( '(' 'hd' exprBase ')' ) | ( '(' 'tl' exprBase ')' ) )
					{
					dbg.location(10,4);
					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:4: ( ( '(' 'hd' exprBase ')' ) | ( '(' 'tl' exprBase ')' ) )
					int alt2=2;
					try { dbg.enterSubRule(2);
					try { dbg.enterDecision(2, decisionCanBacktrack[2]);

					int LA2_0 = input.LA(1);
					if ( (LA2_0==7) ) {
						int LA2_1 = input.LA(2);
						if ( (LA2_1==21) ) {
							alt2=1;
						}
						else if ( (LA2_1==30) ) {
							alt2=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 2, 1, input);
								dbg.recognitionException(nvae);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						dbg.recognitionException(nvae);
						throw nvae;
					}

					} finally {dbg.exitDecision(2);}

					switch (alt2) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:6: ( '(' 'hd' exprBase ')' )
							{
							dbg.location(10,6);
							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:6: ( '(' 'hd' exprBase ')' )
							dbg.enterAlt(1);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:7: '(' 'hd' exprBase ')'
							{
							dbg.location(10,7);
							match(input,7,FOLLOW_7_in_exprBase124); dbg.location(10,11);
							match(input,21,FOLLOW_21_in_exprBase126); dbg.location(10,16);
							pushFollow(FOLLOW_exprBase_in_exprBase128);
							exprBase();
							state._fsp--;
							dbg.location(10,25);
							match(input,8,FOLLOW_8_in_exprBase130); 
							}

							}
							break;
						case 2 :
							dbg.enterAlt(2);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:32: ( '(' 'tl' exprBase ')' )
							{
							dbg.location(10,32);
							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:32: ( '(' 'tl' exprBase ')' )
							dbg.enterAlt(1);

							// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:10:33: '(' 'tl' exprBase ')'
							{
							dbg.location(10,33);
							match(input,7,FOLLOW_7_in_exprBase136); dbg.location(10,37);
							match(input,30,FOLLOW_30_in_exprBase138); dbg.location(10,42);
							pushFollow(FOLLOW_exprBase_in_exprBase140);
							exprBase();
							state._fsp--;
							dbg.location(10,51);
							match(input,8,FOLLOW_8_in_exprBase142); 
							}

							}
							break;

					}
					} finally {dbg.exitSubRule(2);}

					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:11:4: ( '(' SYMBOL lExpr ')' )
					{
					dbg.location(11,4);
					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:11:4: ( '(' SYMBOL lExpr ')' )
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:11:6: '(' SYMBOL lExpr ')'
					{
					dbg.location(11,6);
					match(input,7,FOLLOW_7_in_exprBase151); dbg.location(11,10);
					match(input,SYMBOL,FOLLOW_SYMBOL_in_exprBase153); dbg.location(11,17);
					pushFollow(FOLLOW_lExpr_in_exprBase155);
					lExpr();
					state._fsp--;
					dbg.location(11,23);
					match(input,8,FOLLOW_8_in_exprBase157); 
					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(11, 26);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "exprBase");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "exprBase"



	// $ANTLR start "lExpr"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:13:1: lExpr : ( exprBase lExpr )? ;
	public final void lExpr() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "lExpr");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(13, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:13:7: ( ( exprBase lExpr )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:14:2: ( exprBase lExpr )?
			{
			dbg.location(14,2);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:14:2: ( exprBase lExpr )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= SYMBOL && LA4_0 <= VARIABLE)||LA4_0==7||LA4_0==25) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:14:3: exprBase lExpr
					{
					dbg.location(14,3);
					pushFollow(FOLLOW_exprBase_in_lExpr169);
					exprBase();
					state._fsp--;
					dbg.location(14,12);
					pushFollow(FOLLOW_lExpr_in_lExpr171);
					lExpr();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(14, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "lExpr");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "lExpr"



	// $ANTLR start "expression"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:16:1: expression : exprBase ( '=?' exprBase )? ;
	public final void expression() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "expression");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(16, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:16:12: ( exprBase ( '=?' exprBase )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:17:2: exprBase ( '=?' exprBase )?
			{
			dbg.location(17,2);
			pushFollow(FOLLOW_exprBase_in_expression182);
			exprBase();
			state._fsp--;
			dbg.location(17,11);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:17:11: ( '=?' exprBase )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==13) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:17:12: '=?' exprBase
					{
					dbg.location(17,12);
					match(input,13,FOLLOW_13_in_expression185); dbg.location(17,17);
					pushFollow(FOLLOW_exprBase_in_expression187);
					exprBase();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(5);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(17, 26);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "expression");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "expression"



	// $ANTLR start "vars"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:19:1: vars : VARIABLE ( ',' vars )? ;
	public final void vars() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "vars");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:19:6: ( VARIABLE ( ',' vars )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:20:2: VARIABLE ( ',' vars )?
			{
			dbg.location(20,2);
			match(input,VARIABLE,FOLLOW_VARIABLE_in_vars198); dbg.location(20,11);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:20:11: ( ',' vars )?
			int alt6=2;
			try { dbg.enterSubRule(6);
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==9) ) {
				alt6=1;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:20:12: ',' vars
					{
					dbg.location(20,12);
					match(input,9,FOLLOW_9_in_vars201); dbg.location(20,16);
					pushFollow(FOLLOW_vars_in_vars203);
					vars();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(6);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(20, 21);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "vars");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "vars"



	// $ANTLR start "exprs"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:22:1: exprs : expression ( ',' exprs )? ;
	public final void exprs() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "exprs");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(22, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:22:7: ( expression ( ',' exprs )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:23:2: expression ( ',' exprs )?
			{
			dbg.location(23,2);
			pushFollow(FOLLOW_expression_in_exprs214);
			expression();
			state._fsp--;
			dbg.location(23,13);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:23:13: ( ',' exprs )?
			int alt7=2;
			try { dbg.enterSubRule(7);
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			int LA7_0 = input.LA(1);
			if ( (LA7_0==9) ) {
				alt7=1;
			}
			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:23:14: ',' exprs
					{
					dbg.location(23,14);
					match(input,9,FOLLOW_9_in_exprs217); dbg.location(23,18);
					pushFollow(FOLLOW_exprs_in_exprs219);
					exprs();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(7);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(23, 24);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "exprs");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "exprs"



	// $ANTLR start "output"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:25:1: output : VARIABLE ( ',' output )? ;
	public final void output() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "output");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(25, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:25:8: ( VARIABLE ( ',' output )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:26:2: VARIABLE ( ',' output )?
			{
			dbg.location(26,2);
			match(input,VARIABLE,FOLLOW_VARIABLE_in_output231); dbg.location(26,11);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:26:11: ( ',' output )?
			int alt8=2;
			try { dbg.enterSubRule(8);
			try { dbg.enterDecision(8, decisionCanBacktrack[8]);

			int LA8_0 = input.LA(1);
			if ( (LA8_0==9) ) {
				alt8=1;
			}
			} finally {dbg.exitDecision(8);}

			switch (alt8) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:26:12: ',' output
					{
					dbg.location(26,12);
					match(input,9,FOLLOW_9_in_output234); dbg.location(26,16);
					pushFollow(FOLLOW_output_in_output236);
					output();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(8);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(26, 23);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "output");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "output"



	// $ANTLR start "inputSub"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:28:1: inputSub : VARIABLE ( ',' inputSub )? ;
	public final void inputSub() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "inputSub");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(28, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:28:10: ( VARIABLE ( ',' inputSub )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:29:2: VARIABLE ( ',' inputSub )?
			{
			dbg.location(29,2);
			match(input,VARIABLE,FOLLOW_VARIABLE_in_inputSub248); dbg.location(29,11);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:29:11: ( ',' inputSub )?
			int alt9=2;
			try { dbg.enterSubRule(9);
			try { dbg.enterDecision(9, decisionCanBacktrack[9]);

			int LA9_0 = input.LA(1);
			if ( (LA9_0==9) ) {
				alt9=1;
			}
			} finally {dbg.exitDecision(9);}

			switch (alt9) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:29:12: ',' inputSub
					{
					dbg.location(29,12);
					match(input,9,FOLLOW_9_in_inputSub251); dbg.location(29,16);
					pushFollow(FOLLOW_inputSub_in_inputSub253);
					inputSub();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(9);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(29, 25);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "inputSub");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "inputSub"



	// $ANTLR start "input"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:31:1: input : ( inputSub )? ;
	public final void input() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "input");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(31, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:31:7: ( ( inputSub )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:32:2: ( inputSub )?
			{
			dbg.location(32,2);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:32:2: ( inputSub )?
			int alt10=2;
			try { dbg.enterSubRule(10);
			try { dbg.enterDecision(10, decisionCanBacktrack[10]);

			int LA10_0 = input.LA(1);
			if ( (LA10_0==VARIABLE) ) {
				alt10=1;
			}
			} finally {dbg.exitDecision(10);}

			switch (alt10) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:32:2: inputSub
					{
					dbg.location(32,2);
					pushFollow(FOLLOW_inputSub_in_input264);
					inputSub();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(10);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 10);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "input");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "input"



	// $ANTLR start "commands"
	// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:34:1: commands : command ( ';' commands )? ;
	public final void commands() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "commands");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(34, 0);

		try {
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:34:10: ( command ( ';' commands )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:35:2: command ( ';' commands )?
			{
			dbg.location(35,2);
			pushFollow(FOLLOW_command_in_commands274);
			command();
			state._fsp--;
			dbg.location(35,10);
			// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:35:10: ( ';' commands )?
			int alt11=2;
			try { dbg.enterSubRule(11);
			try { dbg.enterDecision(11, decisionCanBacktrack[11]);

			int LA11_0 = input.LA(1);
			if ( (LA11_0==12) ) {
				alt11=1;
			}
			} finally {dbg.exitDecision(11);}

			switch (alt11) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/esir2/TLC/Compilateur-while/grammaire/While.g:35:11: ';' commands
					{
					dbg.location(35,11);
					match(input,12,FOLLOW_12_in_commands277); dbg.location(35,15);
					pushFollow(FOLLOW_commands_in_commands279);
					commands();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(11);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(35, 25);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "commands");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "commands"


